购物车实例

--- a/index.html
+++ b/index.html
@@ -22,12 +22,19 @@
 			right: 58px;bottom: 27.5%;
 			border-radius:50% ;
 		}
+		a{
+			color: darkslategray;
+			text-decoration: none;
+		}
 	</style>
 </head>
 <body>
 	<!--<img src="image/timg.jpg"/>-->
 	<div id="box">
 		<div id="GotoHappy"></div>
+	</div>
+	<div style="font: 14px 600;text-align: center;">
+		<a href="pages/shop.html">购物车简单实例</a>
 	</div>
 </body>
 <script type="text/javascript">
